modify price to test in prod

--- a/templates/teamplate.html
+++ b/templates/teamplate.html
@@ -14,6 +14,7 @@
 <body>
   <div class="container">
     <h1>¡Gracias por tu compra, {{name}}!</h1>
+    <h1>¡Gracias por tu compra, {{name}}!</h1>
     <p>
       Hola {{name}},
     </p>
