--- a/templates/teamplate.html
+++ b/templates/teamplate.html
@@ -14,20 +14,18 @@
 <body>
   <div class="container">
     <h1>¡Gracias por tu compra, {{name}}!</h1>
-    <h1>¡Gracias por tu compra, {{name}}!</h1>
     <p>
       Hola {{name}},
     </p>
     <p>
       ¡Estamos muy emocionados de tenerte con nosotros! Has adquirido el curso: 
-      <strong>"{{courseTitle}}"</strong>.
-    </p>
-    <p>
-      Hemos registrado tu número de teléfono <strong>{{phone}}</strong> por si necesitamos contactarte.
+      <strong>"{{description}}"</strong>. por
+      <strong>${{price}}</strong>.
     </p>
     <p>
       En breve te contactaremos con más detalles sobre cómo acceder a tu contenido.
     </p>
+    <p>Enlace de inscripción: {{deeplink}}</p>
     <p>
       ¡Prepárate para desatar tu creatividad!
     </p>
