update template & delete unnecesary variable

--- a/templates/paymentSuccess.html
+++ b/templates/paymentSuccess.html
@@ -60,7 +60,7 @@
       ¡Prepárate para desatar tu creatividad!
     </p>
     <div class="footer">
-      &copy; 2025 Modista App
+      &copy; {{year}} Modista App
     </div>
   </div>
 </body>
