--- a/templates/teamplate.html
+++ b/templates/teamplate.html
@@ -70,8 +70,7 @@
       <strong>"{{courseTitle}}"</strong> - <em>{{shortDescription}}</em>.
     </p>
     <p>
-      Valor del Curso Completo: $60.000.- (único pago), abonando hasta el 10/9 le quedaría a
-      <strong>${{price}}</strong>.-
+      Valor del Curso Completo: <strong>${{price}}</strong>.-60.000.-
     </p>
     <p>
       Para realizar el pago debes hacer la transferencia a MercadoPago, lo datos quedan adjuntos abajo
@@ -88,9 +87,8 @@
       ¡Prepárate para desatar tu creatividad!
     </p>
     <div class="footer">
-      &copy; 2025 Modista App
+      &copy; {{year}} Modista App
     </div>
   </div>
 </body>
-
 </html>
