update api from js to ts and delete 60000 from html template

--- a/templates/teamplate.html
+++ b/templates/teamplate.html
@@ -70,7 +70,7 @@
       <strong>"{{courseTitle}}"</strong> - <em>{{shortDescription}}</em>.
     </p>
     <p>
-      Valor del Curso Completo: <strong>${{price}}</strong>.-60.000.-
+      Valor del Curso Completo: -<strong>${{price}}</strong>.-
     </p>
     <p>
       Para realizar el pago debes hacer la transferencia a MercadoPago, lo datos quedan adjuntos abajo
