update template of payment

--- a/templates/teamplate.html
+++ b/templates/teamplate.html
@@ -76,10 +76,9 @@
       Para realizar el pago debes hacer la transferencia a MercadoPago, lo datos quedan adjuntos abajo
     </p>
     <p>
-      <b>Titular</b> Ariel Raul Tecay<br />
-      <b>CUIT/CUIL:</b> 20-32821000-3<br />
-      <b>CVU:</b> 0000003100086441622535<br />
-      <b>Alias:</b> ariel.tecay
+      <b>Titular</b> Micaela Denise Guevara<br />
+      <b>CVU:</b> 0000003100069944243193<br />
+      <b>Alias:</b> mica.menta
     </p>
     <p>Enviar el comprobante de pago a <strong>modistaapp@gmail.com</strong></p>
     <p>
