Add turn controller, bd, type, send emails with the new flow of dashboard

--- a/templates/paymentSuccess.html
+++ b/templates/paymentSuccess.html
@@ -51,10 +51,16 @@
       Hola {{name}},
     </p>
     <p>
-      Te confirmamos que hemos recibido tu pago para el curso <strong>"{{courseTitle}}"</strong> de forma satisfactoria.
+      ¡Felicitaciones! Te confirmamos que hemos recibido tu pago para el curso <strong>"{{courseTitle}}"</strong> de forma satisfactoria.
     </p>
     <p>
-      ¡Ya estás un paso más cerca de empezar! Próximamente recibirás un nuevo correo con todos los detalles y el acceso para tus clases online.
+      <strong>Ya estás oficialmente inscripto/a.</strong>
+    </p>
+    <p>
+      {{details}}
+    </p>
+    <p>
+      ¡Muchas gracias por elegirnos! Ya estás un paso más cerca de empezar. Próximamente recibirás un nuevo correo con todos los detalles y el acceso para tus clases.
     </p>
     <p>
       ¡Prepárate para desatar tu creatividad!
